--- a/frontend/allpack/indinzi/troup/indinzi.html
+++ b/frontend/allpack/indinzi/troup/indinzi.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="/frontend/css/navbar.css">
     <link rel="stylesheet" href="/frontend/css/footer.css">
     <link rel="stylesheet" href="/frontend/allpack/css/indinzi.css">
+    <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
 
 </head>
 <body>
@@ -121,6 +122,212 @@
     
     <a href="#">Hightlight</a>
     </div>
+
+
+    <!-- Main Content -->
+  <div class="container py-5">
+
+    <div class="row" >
+      <!-- Wedding Planner -->
+      <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-duration="1000">
+        <div class="card">
+          <img src="/frontend/allpack/indinzi/assetindinzi/pic18.jpg" class="card-img-top" alt="Wedding Planner">
+          <div class="card-body">
+            <h5 class="card-title">Wedding Planner</h5>
+            <p class="card-text">Our expert wedding planners will guide you every step of the way, ensuring your wedding is organized and stress-free.</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Venue Manager -->
+      <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
+        <div class="card">
+          <img src="/frontend/allpack/indinzi/assetindinzi/pic1.jpg" class="card-img-top" alt="Venue Manager">
+          <div class="card-body">
+            <h5 class="card-title">Venue Manager</h5>
+            <p class="card-text">The Venue Manager oversees the logistics and setup of the venue, ensuring everything runs smoothly on your big day.</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Event Coordinator -->
+      <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">
+        <div class="card">
+          <img src="/frontend/allpack/indinzi/assetindinzi/noella.jpg" class="card-img-top" alt="Event Coordinator">
+          <div class="card-body">
+            <h5 class="card-title">Event Coordinator</h5>
+            <p class="card-text">Our Event Coordinators are responsible for ensuring the event unfolds as planned, managing the schedule and all moving parts.</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Decor Specialist -->
+      <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">
+        <div class="card">
+          <img src="/frontend/allpack/indinzi/assetindinzi/patty.jpg" class="card-img-top" alt="Decor Specialist">
+          <div class="card-body">
+            <h5 class="card-title">Decor Specialist</h5>
+            <p class="card-text">Our Decor Specialists bring your vision to life with stunning floral arrangements, lighting, and unique styling.</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Catering Manager -->
+      <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="800">
+        <div class="card">
+          <img src="/frontend/allpack/indinzi/assetindinzi/best.jpg" class="card-img-top" alt="Catering Manager">
+          <div class="card-body">
+            <h5 class="card-title">Catering Manager</h5>
+            <p class="card-text">The Catering Manager ensures a delicious and customized menu, providing your guests with exceptional food and service.</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Photographer/Videographer -->
+      <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="1000">
+        <div class="card">
+          <img src="/frontend/allpack/indinzi/assetindinzi/pic.jpg" class="card-img-top" alt="Photographer/Videographer">
+          <div class="card-body">
+            <h5 class="card-title">Photographer & Videographer</h5>
+            <p class="card-text">Our photographers and videographers capture every precious moment, creating beautiful memories that last a lifetime.</p>
+          </div>
+        </div>
+      </div>
+      <!-------------- addition1-->
+      <!-- Decor Specialist -->
+      <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">
+        <div class="card">
+          <img src="/frontend/allpack/indinzi/assetindinzi/pic15.jpg" class="card-img-top" alt="Decor Specialist">
+          <div class="card-body">
+            <h5 class="card-title">Decor Specialist</h5>
+            <p class="card-text">Our Decor Specialists bring your vision to life with stunning floral arrangements, lighting, and unique styling.</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Catering Manager -->
+      <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="800">
+        <div class="card">
+          <img src="/frontend/allpack/indinzi/assetindinzi/pic13.jpg" class="card-img-top" alt="Catering Manager">
+          <div class="card-body">
+            <h5 class="card-title">Catering Manager</h5>
+            <p class="card-text">The Catering Manager ensures a delicious and customized menu, providing your guests with exceptional food and service.</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Photographer/Videographer -->
+      <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="1000">
+        <div class="card">
+          <img src="/frontend/allpack/indinzi/assetindinzi/pic16.jpg" class="card-img-top" alt="Photographer/Videographer">
+          <div class="card-body">
+            <h5 class="card-title">Photographer & Videographer</h5>
+            <p class="card-text">Our photographers and videographers capture every precious moment, creating beautiful memories that last a lifetime.</p>
+          </div>
+        </div>
+      </div>
+
+    
+  <!-- add 2 -->
+   <!-- Decor Specialist -->
+   <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">
+    <div class="card">
+      <img src="/frontend/allpack/indinzi/assetindinzi/eunice.jpg" class="card-img-top" alt="Decor Specialist">
+      <div class="card-body">
+        <h5 class="card-title">Decor Specialist</h5>
+        <p class="card-text">Our Decor Specialists bring your vision to life with stunning floral arrangements, lighting, and unique styling.</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- Catering Manager -->
+  <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="800">
+    <div class="card">
+      <img src="/frontend/allpack/indinzi/assetindinzi/oben2.jpg" class="card-img-top" alt="Catering Manager">
+      <div class="card-body">
+        <h5 class="card-title">Catering Manager</h5>
+        <p class="card-text">The Catering Manager ensures a delicious and customized menu, providing your guests with exceptional food and service.</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- Photographer/Videographer -->
+  <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="1000">
+    <div class="card">
+      <img src="/frontend/allpack/indinzi/assetindinzi/pic17.jpg" class="card-img-top" alt="Photographer/Videographer">
+      <div class="card-body">
+        <h5 class="card-title">Photographer & Videographer</h5>
+        <p class="card-text">Our photographers and videographers capture every precious moment, creating beautiful memories that last a lifetime.</p>
+      </div>
+    </div>
+  </div>
+<!--add3-->
+   <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">
+    <div class="card">
+      <img src="/frontend/allpack/indinzi/assetindinzi/pic12.jpg" class="card-img-top" alt="Decor Specialist">
+      <div class="card-body">
+        <h5 class="card-title">Decor Specialist</h5>
+        <p class="card-text">Our Decor Specialists bring your vision to life with stunning floral arrangements, lighting, and unique styling.</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- Catering Manager -->
+  <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="800">
+    <div class="card">
+      <img src="/frontend/allpack/indinzi/assetindinzi/pic22.jpg" class="card-img-top" alt="Catering Manager">
+      <div class="card-body">
+        <h5 class="card-title">Catering Manager</h5>
+        <p class="card-text">The Catering Manager ensures a delicious and customized menu, providing your guests with exceptional food and service.</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- Photographer/Videographer -->
+  <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="1000">
+    <div class="card">
+      <img src="/frontend/allpack/indinzi/assetindinzi/pic14.jpg" class="card-img-top" alt="Photographer/Videographer">
+      <div class="card-body">
+        <h5 class="card-title">Photographer & Videographer</h5>
+        <p class="card-text">Our photographers and videographers capture every precious moment, creating beautiful memories that last a lifetime.</p>
+      </div>
+    </div>
+  </div>
+<!--add4-->
+<div class="col-md-4 mb-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">
+    <div class="card">
+      <img src="/frontend/allpack/indinzi/assetindinzi/last3.jpg" class="card-img-top" alt="Decor Specialist">
+      <div class="card-body">
+        <h5 class="card-title">Decor Specialist</h5>
+        <p class="card-text">Our Decor Specialists bring your vision to life with stunning floral arrangements, lighting, and unique styling.</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- Catering Manager -->
+  <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="800">
+    <div class="card">
+      <img src="/frontend/allpack/indinzi/assetindinzi/abakobwa.jpg" class="card-img-top" alt="Catering Manager">
+      <div class="card-body">
+        <h5 class="card-title">Catering Manager</h5>
+        <p class="card-text">The Catering Manager ensures a delicious and customized menu, providing your guests with exceptional food and service.</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- Photographer/Videographer -->
+  <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="1000">
+    <div class="card">
+      <img src="/frontend/allpack/indinzi/assetindinzi/last2.jpg" class="card-img-top" alt="Photographer/Videographer">
+      <div class="card-body">
+        <h5 class="card-title">Photographer</h5>
+        <p class="card-text">Our photographers and videographers capture every precious moment, creating beautiful memories that last a lifetime.</p>
+      </div>
+    </div>
+  </div>
+
+</div>
+</div>
     <!-- Footer -->
     <footer class="bg-dark text-light py-4 footer-animated">
         <div class="container">
@@ -177,7 +384,12 @@
             </div>
         </div>
     </footer>
-
+  <!-- AOS JS -->
+  <!-- AOS JS -->
+  <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+    <script>
+        AOS.init();
+      </script>
     <!-- Bootstrap JS and Popper.js -->
     <script
         src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
