--- a/frontend/allpack/indinzi/troup/indinzi.html
+++ b/frontend/allpack/indinzi/troup/indinzi.html
@@ -117,15 +117,15 @@
         </button>
     </div>
 </div>
-<div class="item">
-    <a href="#">Images</a>
+<div class="item my-4">
+    <a href="#Images">Images</a>
     
     <a href="#">Hightlight</a>
     </div>
 
 
     <!-- Main Content -->
-  <div class="container py-5">
+  <div class="container py-5" id="Images">
 
     <div class="row" >
       <!-- Wedding Planner -->
