--- a/frontend/home_packages/index.html
+++ b/frontend/home_packages/index.html
@@ -126,8 +126,9 @@
   
   <div class="col-md-4">
     <div class="card " >
-
-      <img src="/assethome/aime.jpg" class="card-img-top" alt="...">
+      <a href="/frontend/allpack/indinzi/troup/indinzi.html">
+        <img src="/assethome/aime.jpg" class="card-img-top" alt="Troupe">
+      </a>
       <div class="card-body d-flex flex-column">
         <h5 class="card-title mb-2">Troupe</h5>
         <a href="/frontend/allpack/indinzi/troup/indinzi.html" class="btn btn-primary">Read More</a>
