--- a/frontend/test.html
+++ b/frontend/test.html
@@ -1,56 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Wedding Planner - Bootstrap</title>
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Video Gallery</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+    <div class="container my-5">
+        <div class="row">
+            <!-- Video 1 -->
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <img src="/frontend/allpack/indinzi/assetindinzi/20.jpg" class="card-img-top" alt="Video thumbnail">
+                    <div class="card-body">
+                        <h5 class="card-title">Video 1</h5>
+                        <button class="btn btn-primary" data-toggle="modal" data-target="#videoModal1">Watch Video</button>
+                    </div>
+                </div>
+            </div>
 
-  <!-- Wedding Planner Section -->
-  <section class="container py-5">
-    <div class="row">
-      <!-- Wedding Planner Card -->
-      <div class="col-md-4 mb-4">
-        <div class="card">
-          <img src="https://via.placeholder.com/500x300" class="card-img-top" alt="Wedding Planner">
-          <div class="card-body">
-            <h5 class="card-title">Wedding Planner</h5>
-            <p class="card-text">Our expert wedding planners will guide you every step of the way, ensuring your wedding is organized and stress-free.</p>
-            <a href="#" class="btn btn-primary">Learn More</a>
-          </div>
-        </div>
-      </div>
+            <!-- Video 2 -->
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <img src="https://via.placeholder.com/400x200" class="card-img-top" alt="Video thumbnail">
+                    <div class="card-body">
+                        <h5 class="card-title">Video 2</h5>
+                        <button class="btn btn-primary" data-toggle="modal" data-target="#videoModal2">Watch Video</button>
+                    </div>
+                </div>
+            </div>
 
-      <!-- Wedding Planner Card -->
-      <div class="col-md-4 mb-4">
-        <div class="card">
-          <img src="https://via.placeholder.com/500x300" class="card-img-top" alt="Wedding Planner">
-          <div class="card-body">
-            <h5 class="card-title">Event Coordination</h5>
-            <p class="card-text">From ceremony to reception, we ensure everything runs smoothly, so you can focus on enjoying your big day.</p>
-            <a href="#" class="btn btn-primary">Learn More</a>
-          </div>
+            <!-- Video 3 -->
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <img src="https://via.placeholder.com/400x200" class="card-img-top" alt="Video thumbnail">
+                    <div class="card-body">
+                        <h5 class="card-title">Video 3</h5>
+                        <button class="btn btn-primary" data-toggle="modal" data-target="#videoModal3">Watch Video</button>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
-
-      <!-- Wedding Planner Card -->
-      <div class="col-md-4 mb-4">
-        <div class="card">
-          <img src="https://via.placeholder.com/500x300" class="card-img-top" alt="Wedding Planner">
-          <div class="card-body">
-            <h5 class="card-title">Vendor Selection</h5>
-            <p class="card-text">We have an extensive network of trusted vendors, from florists to photographers, making sure you get the best for your wedding.</p>
-            <a href="#" class="btn btn-primary">Learn More</a>
-          </div>
-        </div>
-      </div>
     </div>
-  </section>
 
-  <!-- Bootstrap JS (Optional) -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Video Modal 1 (HTML5 Video) -->
+    <div class="modal fade" id="videoModal1" tabindex="-1" role="dialog" aria-labelledby="videoModal1Label" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="videoModal1Label">Video 1</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <!-- Direct .mp4 File Video -->
+                    <video id="video1" width="100%" controls>
+                        <source src="/frontend/allpack/indinzi/video_asset/SaveClip.App_AQMKsW2n14Qbkw96Kr5jP4mQyYdIqodWPbuSdjhUu41ggSO_Ujr_DgcYnAJ7xCMvh-4xXRLLFyxZJDeb-fmF86nXdegytu0oScqPx5s.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Video Modal 2 (YouTube Video) -->
+    <div class="modal fade" id="videoModal2" tabindex="-1" role="dialog" aria-labelledby="videoModal2Label" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="videoModal2Label">Video 2</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <iframe id="youtubeVideo2" width="100%" height="315" src="https://www.youtube.com/embed/YOUR_VIDEO_ID" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Video Modal 3 (YouTube Video) -->
+    <div class="modal fade" id="videoModal3" tabindex="-1" role="dialog" aria-labelledby="videoModal3Label" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="videoModal3Label">Video 3</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <iframe id="youtubeVideo3" width="100%" height="315" src="https://www.youtube.com/embed/YOUR_VIDEO_ID" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script>
+        // Stop and reset the video when the modal is closed (for HTML5 video)
+        $('#videoModal1').on('hidden.bs.modal', function () {
+            var video = document.getElementById('video1');
+            if (video) {
+                video.pause();  // Pause the video
+                video.currentTime = 0;  // Reset the video to the start
+            }
+        });
+
+        // Stop YouTube videos by removing and restoring the iframe's src (for Video Modal 2)
+        $('#videoModal2').on('hidden.bs.modal', function () {
+            var iframe = document.getElementById('youtubeVideo2');
+            var iframeSrc = iframe.src;
+            iframe.src = '';  // Remove the src to stop the video and audio
+            iframe.src = iframeSrc;  // Restore the original src to restart the video when opened again
+        });
+
+        // Stop YouTube videos by removing and restoring the iframe's src (for Video Modal 3)
+        $('#videoModal3').on('hidden.bs.modal', function () {
+            var iframe = document.getElementById('youtubeVideo3');
+            var iframeSrc = iframe.src;
+            iframe.src = '';  // Remove the src to stop the video and audio
+            iframe.src = iframeSrc;  // Restore the original src to restart the video when opened again
+        });
+    </script>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
