--- a/test2.html
+++ b/test2.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wedding Planner Video Gallery</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet"> <!-- Add Font Awesome -->
     <style>
         body {
             background-color: #f4f4f4;
@@ -49,6 +50,22 @@
             font-size: 18px;
             margin-top: 10px;
             color: #333;
+        }
+
+        /* Play button styles */
+        .play-icon {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            font-size: 50px;
+            color: rgb(3, 133, 255);
+            opacity: 0.8;
+            transition: opacity 0.3s ease;
+        }
+
+        .video-container:hover .play-icon {
+            opacity: 1; /* Show the play icon on hover */
         }
 
         .close-button {
@@ -102,25 +119,30 @@
 <div class="container">
     <h2>Wedding Planner Video Gallery</h2>
     <div class="video-row">
-        <div class="video-container">
-            <img src="/frontend/allpack/indinzi/assetindinzi/20.jpg" alt="Wedding Highlights" data-video-id="video1">
+        <div class="video-container" data-video-id="video1">
+            <img src="/frontend/allpack/indinzi/assetindinzi/20.jpg" alt="Wedding Highlights">
             <h5>Wedding Highlights</h5>
+            <i class="fas fa-play play-icon"></i> <!-- Play icon -->
         </div>
-        <div class="video-container">
-            <img src="https://via.placeholder.com/300x200?text=Client+Testimonials" alt="Client Testimonials" data-video-id="video2">
+        <div class="video-container" data-video-id="video2">
+            <img src="https://via.placeholder.com/300x200?text=Client+Testimonials" alt="Client Testimonials">
             <h5>Client Testimonials</h5>
+            <i class="fas fa-play play-icon"></i> <!-- Play icon -->
         </div>
-        <div class="video-container">
-            <img src="https://via.placeholder.com/300x200?text=Venue+Tour" alt="Venue Tour" data-video-id="video3">
+        <div class="video-container" data-video-id="video3">
+            <img src="https://via.placeholder.com/300x200?text=Venue+Tour" alt="Venue Tour">
             <h5>Venue Tour</h5>
+            <i class="fas fa-play play-icon"></i> <!-- Play icon -->
         </div>
-        <div class="video-container">
-            <img src="https://via.placeholder.com/300x200?text=Planning+Tips" alt="Planning Tips" data-video-id="video4">
+        <div class="video-container" data-video-id="video4">
+            <img src="https://via.placeholder.com/300x200?text=Planning+Tips" alt="Planning Tips">
             <h5>Planning Tips</h5>
+            <i class="fas fa-play play-icon"></i> <!-- Play icon -->
         </div>
-        <div class="video-container">
-            <img src="https://via.placeholder.com/300x200?text=Real+Weddings" alt="Real Weddings" data-video-id="video5">
+        <div class="video-container" data-video-id="video5">
+            <img src="https://via.placeholder.com/300x200?text=Real+Weddings" alt="Real Weddings">
             <h5>Real Weddings</h5>
+            <i class="fas fa-play play-icon"></i> <!-- Play icon -->
         </div>
     </div>
 </div>
@@ -153,16 +175,20 @@
         video5: '/path/to/your/video5.mp4'
     };
 
-    // Add event listener to image click to show the video in the modal
-    document.querySelectorAll('.video-container img').forEach(image => {
-        image.addEventListener('click', function () {
+    // Add event listener to play icons and images to show the video in the modal
+    document.querySelectorAll('.video-container').forEach(container => {
+        container.addEventListener('click', function () {
             const videoId = this.getAttribute('data-video-id');
             const video = document.getElementById("videoPlayer");
             const videoSource = document.getElementById("videoSource");
+            const image = this.querySelector('img'); // Get the image inside the container
+
+            // Hide the image when video is played
+            image.style.display = 'none';
 
             // Set the video source based on the clicked image's video ID
             videoSource.src = videoSources[videoId];
-            document.getElementById("videoPlayer").load(); // Reload video with the new source
+            video.load(); // Reload video with the new source
 
             // Disable PiP for the video
             video.disablePictureInPicture = true;
@@ -183,6 +209,12 @@
         video.currentTime = 0; // Reset to the beginning
         const modal = bootstrap.Modal.getInstance(document.getElementById('videoModal'));
         modal.hide(); // Hide the modal
+
+        // Show the image again when closing the modal
+        document.querySelectorAll('.video-container').forEach(container => {
+            const image = container.querySelector('img');
+            image.style.display = 'block'; // Show the image again
+        });
     });
 
     // Close the modal and stop video when video ends
@@ -192,6 +224,12 @@
         video.currentTime = 0; // Reset to the beginning
         const modal = bootstrap.Modal.getInstance(document.getElementById('videoModal'));
         modal.hide(); // Hide the modal
+
+        // Show the image again when video ends
+        document.querySelectorAll('.video-container').forEach(container => {
+            const image = container.querySelector('img');
+            image.style.display = 'block'; // Show the image again
+        });
     });
 
     // Close the modal when clicking outside the modal (on the backdrop)
@@ -203,6 +241,12 @@
             video.currentTime = 0; // Reset to the beginning
             const modal = bootstrap.Modal.getInstance(document.getElementById('videoModal'));
             modal.hide(); // Hide the modal
+
+            // Show the image again when modal is closed
+            document.querySelectorAll('.video-container').forEach(container => {
+                const image = container.querySelector('img');
+                image.style.display = 'block'; // Show the image again
+            });
         }
     });
 </script>
