--- a/frontend/test.html
+++ b/frontend/test.html
@@ -72,7 +72,7 @@
             position: absolute;
             top: 10px;
             right: 10px;
-            background-color: red;
+            background-color: rgb(0, 140, 255);
             color: white;
             border: none;
             padding: 10px;
@@ -80,6 +80,7 @@
             font-size: 16px;
             cursor: pointer;
             z-index: 10;
+            transform: rotate(90deg);
         }
 
         /* Media query for mobile devices */
